data/derived/comb/progs/unify/prog0424.ml.out
Characters 13-14:
  let _ = foo [1;2;3;4;5] [1;0;1;0];;
               ^
Error: This expression has type int but an expression was expected of type
         'a -> 'a
